asks a user for grid size

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="display_grid_option">
+            <div class="grid_number" id="set-grid">
+                <h1>Set Grid Number</h1>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
