creates a space for a grid

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </div>
     </header>
     <main>
-
+        <div id="draw-box" class="play-ground">
+            
+        </div>
     </main>
     <footer>
 
